--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,13 @@ body{
     margin:0 auto!important;
 }
 section{
-    background-color: lightblue;
+    overflow: hidden;
 }
 .container{
     padding-top:67px;
 }
 h2{
-    padding-top:33px;
+    padding-top:15px;
     font-weight: 25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
 }
@@ -21,7 +21,6 @@ h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
     color:#707070;
     padding-top: 33px;
-
 }
 .share{
     color:#6A73E2;
@@ -30,4 +29,36 @@ h3{
     color:#FA578E;
 }
 
-.l
+.login_para{
+    color:#707070;
+    padding-top:10px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+}
+.form-group{
+    padding-top: 10px;
+}
+.form-group input{
+    border-radius: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+    color:#707070;
+    
+}
+.forget_pass{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+    margin-top:15px!important;
+    color:#FA578E;
+    margin-left:45%;
+}
+.btn{
+    color:#fff!important;
+    background:#6A73E2!important;
+    margin-top:20px;
+    border-radius: 20px!important;
+    width:50%;
+}
+.create_new{
+    color:#707070;
+    padding-top:10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+}
