--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,48 @@
     padding:0px;
     margin:0px;
 }
-body{
-    max-width:375px!important;
-    margin:0 auto!important;
-}
 section{
+    margin:0 auto!important;
     overflow: hidden;
+    max-width:375px!important;
+    max-height: 812px!important;
+
 }
-.container{
-    padding-top:67px;
+.logo{
+    padding-top:37px;
 }
+.Sendlogo{
+    padding-top:37px;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Sendlogo a {
+    color: #6A73E2;
+    font-size: 40px;
+}
+.Sendlogo a:hover {
+    text-decoration: none;
+    color: #6A73E2;
+}
+.receivelogo{
+    margin-top:100%;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.receivelogo a{
+    color: #FA578E;
+    font-size: 40px;
+}
+.receivelogo a:hover{
+    text-decoration: none;
+    color: #FA578E;
+}
+
 h2{
     padding-top:15px;
     font-weight: 25px;
@@ -47,18 +79,132 @@ h3{
 .forget_pass{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
     margin-top:15px!important;
-    color:#FA578E;
+    color:#6A73E2;
     margin-left:45%;
 }
-.btn{
+.Login{
     color:#fff!important;
     background:#6A73E2!important;
     margin-top:20px;
     border-radius: 20px!important;
-    width:50%;
+    width:100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    align-items: center;
 }
+
+.Login::before{
+    content:'';
+    position:absolute;
+    left:0;
+    top:0;
+    transform:scaleX(0);
+    transform-origin: 0 50%;
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    transition: transform 750ms;
+}
+.Login:hover::before{
+    transform:scaleX(1);
+    background-color: #FA578E;
+}
+
+
+
+
+
+
+
+.Create{ 
+    color:#fff!important;
+    background:#6A73E2!important;
+    margin-top:20px;
+    border-radius: 20px!important;
+    width:100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    align-items: center;
+}
+.Create::before{
+    content:'';
+    position:absolute;
+    left:0;
+    top:0;
+    transform:scaleX(0);
+    transform-origin: 0 50%;
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    transition: transform 750ms;
+}
+
+.Create:hover::before{
+    transform:scaleX(1);
+    background-color: #FA578E;
+}
+
+
+
+
+
+
+.Start_Tutorial{
+    color:#fff!important;
+    background:#6A73E2!important;
+    margin-top:20px;
+    border-radius: 20px!important;
+    width:100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    align-items: center;
+}
+.Start_Tutorial::before{
+    content:'';
+    position:absolute;
+    left:0;
+    top:0;
+    transform:scaleX(0);
+    transform-origin: 0 50%;
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    transition: transform 750ms;
+}
+.Start_Tutorial:hover::before{
+    transform:scaleX(1);
+    background-color: #FA578E;
+}
+
+
+
+
+
 .create_new{
     color:#707070;
     padding-top:10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+}
+
+.create_new a{
+    color: #6A73E2;
+}
+
+.create_new a:hover{
+    color:#FA578E;
+    text-decoration: none;
+}
+.forget_pass:hover{
+    color:#FA578E;
+    text-decoration: none;
+}
+.Skip{
+    color: #6A73E2;
+}
+.Skip:hover{
+    color:#FA578E;
+    text-decoration: none;    
 }
