new screens added

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,35 @@ section{
 .logo{
     padding-top:37px;
 }
-.Sendlogo{
-    padding-top:37px;
+.Sendlogo_one{
+    
+    margin-top:15%;
+    width:100%;
+    display: flex;
+    padding-left:20px;
+    justify-content: center;
+    align-items: center;
+}
+.Sendlogo_one a{
+    
+    color: #6A73E2;
+    font-size: 40px;
+}
+
+.Sendlogo_one a:hover{
+    
+    color: #6A73E2;
+    text-decoration: none;
+}
+
+.Sendlogo_one img{
+    font-size: 20px!important;
+    width:160px;
+}
+
+.receive_one{
+    
+    margin-top:15%;
     width:100%;
     display: flex;
     padding-left:20px;
@@ -20,14 +47,22 @@ section{
     align-items: center;
 }
 
-.Sendlogo a {
-    color: #6A73E2;
+.receive_one a{
+    color: #FA578E;
     font-size: 40px;
 }
-.Sendlogo a:hover {
+
+.receive_one a:hover{
+    color: #FA578E;
+    font-size: 40px;
     text-decoration: none;
-    color: #6A73E2;
 }
+
+.receive_one img{
+    font-size: 20px!important;
+    width: 160px !important;;
+}
+
 .receivelogo{
     margin-top:100%;
     width:100%;
@@ -43,6 +78,10 @@ section{
     text-decoration: none;
     color: #FA578E;
 }
+.receivelogo img{
+    font-size: 20px!important;
+    width:160px;
+}
 
 h2{
     padding-top:15px;
@@ -52,7 +91,7 @@ h2{
 h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
     color:#707070;
-    padding-top: 33px;
+    margin-top: 10%!important;
 }
 .share{
     color:#6A73E2;
@@ -66,6 +105,9 @@ h3{
     padding-top:10px;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif!important;
+}
+form{
+    margin-top:10%;
 }
 .form-group{
     padding-top: 10px;
@@ -288,10 +330,8 @@ h3{
 .drop_shadow{
     width:500%;
     border-radius: 0px 0px 200px 200px;
-    border: 1px solid;
     padding: 10px;
-    box-shadow: 1px 10px #77777777;
-  
+    box-shadow: 0 10px #77777777;
 }
 
 .icon{
