--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,10 @@ section{
 .logo{
     padding-top:37px;
 }
+.Sendlogo_one-row{
+    height: 312px;
+}
 .Sendlogo_one{
-    
-    margin-top:15%;
     width:100%;
     display: flex;
     padding-left:20px;
@@ -36,10 +37,10 @@ section{
     font-size: 20px!important;
     width:160px;
 }
-
+.receive_one-row{
+    height:312px;
+}
 .receive_one{
-    
-    margin-top:15%;
     width:100%;
     display: flex;
     padding-left:20px;
@@ -64,7 +65,7 @@ section{
 }
 
 .receivelogo{
-    margin-top:100%;
+    
     width:100%;
     display: flex;
     justify-content: center;
@@ -292,7 +293,11 @@ form{
     position: relative;
     overflow:hidden;
     width:100%;
-    height: 300px;
+    height: 350px;
+}
+.carousel_track-container h3{
+    margin:0px 5% 5% 5%!important;
+    font-size: 25px;
 }
 .carousel__track{
     padding:0;
